github-runner-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: github-runner
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: github-runner
  template:
    metadata:
      labels:
        app: github-runner
    spec:
      nodeSelector:
        kubernetes.io/hostname: talos-o5y-af4
      containers:
      - name: runner
        image: myoung34/github-runner:latest
        securityContext:
          privileged: true
        resources:
          limits:
            cpu: "44"
            memory: "180Gi"
          requests:
            cpu: "4"
            memory: "16Gi"
        volumeMounts:
        - name: runner-data
          mountPath: /home/runner/_work
      volumes:
      - name: runner-data
        emptyDir: {}
